# sleep-quality-advisor

./: .gitignore  IAM-PERMISSIONS-GUIDE.md  README.md  WEEKLY_REPORT_DEPLOYMENT.md  WEEKLY_REPORT_README.md  iam-deployment-policy-part1.json  iam-deployment-policy-part2.json  iam-deployment-policy.json  sleep-quality-advisor.code-workspace
.cursor/rules/: tests.mdc
.github/workflows/: pr-check.yml
backend/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  samconfig.toml  template.yaml
backend/src/common/: config.py  ddb.py  fitbit_client.py  models.py  timeutil.py
backend/src/env_ingest_authorizer/: handler.py
backend/src/env_ingest_consumer/: handler.py
backend/src/fitbit_authorize/: handler.py
backend/src/fitbit_callback/: handler.py
backend/src/fitbit_fetch/: handler.py
backend/src/health_analyzer_agent/: Dockerfile  __init__.py  agent.py  requirements.txt
backend/src/mcp_server/: __init__.py  handler.py
backend/src/weekly_report/: __init__.py  handler.py  pdf_generator.py
backend/tests/: conftest.py  test_env_ingest_authorizer.py  test_env_ingest_consumer.py  test_fitbit_authorize.py  test_fitbit_callback.py  test_fitbit_fetch.py  test_health_analyzer_agent.py  test_mcp_server.py  test_pdf_generator.py  test_timeutil.py  test_weekly_report.py  utils.py
rpi/: .gitignore  README.md  mypy.ini  pyproject.toml
rpi/src/: config.py  helpers.py  led.py  main.py  models.py  offline_queue.py  publisher.py
rpi/src/bme680_sensor/: check_connection.py  helpers.py  reader.py
rpi/src/veml6030_sensor/: __init__.py  check_connection.py  helpers.py  reader.py
rpi/systemd/: sqa-bme680.service.template  sqa.service.template
rpi/tests/: test_offline_queue.py  test_payload.py
streamlit/: .dockerignore  Dockerfile  Dockerfile.offline  README.md  app.py  pyproject.toml  samconfig.toml  template.yaml
streamlit/src/: __init__.py  auth.py  data.py  stats.py
