[project]
name = "sleep-quality-advisor-backend"
version = "0.1.0"
description = "Backend for Sleep Quality Advisor"
requires-python = ">=3.12"
readme = "../README.md"
license = { file = "../LICENSE" }
dependencies = [
  "aws-lambda-powertools",
  "boto3",
  "typing-extensions",
  "pydantic",
  "requests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","I"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
mypy_path = "src"
plugins = []

[tool.uv]

[dependency-groups]
dev = [
    "moto>=5.1.14",
    "mypy>=1.18.2",
    "mypy-boto3-dynamodb>=1.40.20",
    "mypy-boto3-secretsmanager>=1.40.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "taskipy>=1.14.1",
    "mcp>=1.0.0",
    "reportlab>=4.0.0",
    "strands-agents>=0.1.0",
]

[tool.taskipy.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format --check ."
format-fix = "ruff format ."
typecheck = "mypy --config-file mypy.ini src"
check-fix = "task lint-fix && task format-fix && task typecheck && task test && (command -v sam >/dev/null 2>&1 && sam validate || echo 'SAM CLI not found, skipping template validation')"
check = "task lint && task format && task typecheck && task test && (command -v sam >/dev/null 2>&1 && sam validate || echo 'SAM CLI not found, skipping template validation')"
test = "PYTHONPATH=src pytest -q"
test-cov = "PYTHONPATH=src pytest -q --cov=src --cov-report=term-missing"
build = "uv export --frozen --no-dev --no-editable -o src/requirements.txt && sam build"
deploy = "sam deploy"