[project]
name = "sleep-quality-advisor-streamlit"
version = "0.1.0"
description = "Local Streamlit dashboard for Sleep Quality Advisor"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "streamlit>=1.39.0",
  "boto3>=1.34.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "plotly>=5.22.0",
  "python-dotenv>=1.0.0",
]

[tool.uv]

[dependency-groups]
dev = [
  "taskipy>=1.14.0",
  "ruff>=0.13.2",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
]

[tool.taskipy.tasks]
app = "streamlit run app.py"
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format --check ."
format-fix = "ruff format ."
typecheck = "mypy src"
test = "PYTHONPATH=src pytest -q"
check = "task lint && task format && task typecheck && task test"
check-fix = "task lint-fix && task format-fix && task typecheck && task test"

